# name: test_create_api_key[has permission-full][dl]
  <class 'dict'> {
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'id': 'baz',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_create_api_key[has permission-full][mongo]
  <class 'dict'> {
    '_id': 'baz',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      'fb085f7f',
      'bf1b993c',
    ],
    'id': 'foo_0',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': '7cf872dc',
    },
  }
---
# name: test_create_api_key[has permission-none][dl]
  <class 'dict'> {
    'administrator': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'id': 'baz',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_create_api_key[has permission-none][mongo]
  <class 'dict'> {
    '_id': 'baz',
    'administrator': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      'fb085f7f',
      'bf1b993c',
    ],
    'id': 'foo_0',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': '7cf872dc',
    },
  }
---
# name: test_create_api_key[missing permission-full][dl]
  <class 'dict'> {
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'id': 'baz',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_create_api_key[missing permission-full][mongo]
  <class 'dict'> {
    '_id': 'baz',
    'administrator': True,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      'fb085f7f',
      'bf1b993c',
    ],
    'id': 'foo_0',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': True,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': '7cf872dc',
    },
  }
---
# name: test_create_api_key[missing permission-none][dl]
  <class 'dict'> {
    'administrator': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'id': 'baz',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
  }
---
# name: test_create_api_key[missing permission-none][mongo]
  <class 'dict'> {
    '_id': 'baz',
    'administrator': False,
    'created_at': datetime.datetime(2015, 10, 6, 20, 0),
    'groups': <class 'list'> [
      'fb085f7f',
      'bf1b993c',
    ],
    'id': 'foo_0',
    'name': 'Foo',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': '7cf872dc',
    },
  }
---
